<resources>
    <string name="app_name">CalculadoraJFPS</string>
    <string name="number7">7</string>
    <string name="buttonClearAll">C</string>
    <string name="btnDot">.</string>
    <string name="btnEquals">=</string>
    <string name="btnMinus">-</string>
    <string name="btnMultiply">x</string>
    <string name="number0">0</string>
    <string name="btnPlus">+</string>
    <string name="number1">1</string>
    <string name="number2">2</string>
    <string name="number3">3</string>
    <string name="number4">4</string>
    <string name="number5">5</string>
    <string name="number6">6</string>
    <string name="number9">9</string>
    <string name="btnClear">CE</string>
    <string name="btnPow">POW</string>
    <string name="btnDivide">/</string>
    <string name="btnRoot">ROOT</string>
    <string name="number8">8</string>
    <string name="textviewHistory">Historial de operaciones</string>
    <string name="textviewOperation">0</string>
</resources>